--- a/figure/make_fig.ipynb
+++ b/figure/make_fig.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,12 +57,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "n_spin_min = 3\n",
-    "n_spin_max = 12\n",
+    "n_spin_max = 7\n",
     "beta_list = [1e-1, 1e0, 2e0, 5e0, 1e1]"
    ]
   },
@@ -82,14 +82,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(5, 10, 4, 100)\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../result/spectral_gap/3_sites/beta_1e-01.npy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m n_spin \u001b[38;5;129;01min\u001b[39;00m n_spin_list:\n\u001b[1;32m      8\u001b[0m \t\u001b[38;5;28;01mif\u001b[39;00m j \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m----> 9\u001b[0m \t\tgap_data_beta \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../result/spectral_gap/\u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[38;5;124m_sites/beta_\u001b[39m\u001b[38;5;132;01m{1}\u001b[39;00m\u001b[38;5;124m.npy\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(n_spin, \u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{:.0e}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(beta_list[i])))[np\u001b[38;5;241m.\u001b[39mnewaxis]\n\u001b[1;32m     10\u001b[0m \t\u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     11\u001b[0m \t\tgap_data_beta \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mconcatenate([gap_data_beta, np\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../result/spectral_gap/\u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[38;5;124m_sites/beta_\u001b[39m\u001b[38;5;132;01m{1}\u001b[39;00m\u001b[38;5;124m.npy\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(n_spin, \u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{:.0e}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(beta_list[i])))[np\u001b[38;5;241m.\u001b[39mnewaxis]])\n",
+      "File \u001b[0;32m/opt/anaconda3/envs/quantum/lib/python3.11/site-packages/numpy/lib/npyio.py:427\u001b[0m, in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding, max_header_size)\u001b[0m\n\u001b[1;32m    425\u001b[0m     own_fid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m    426\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 427\u001b[0m     fid \u001b[38;5;241m=\u001b[39m stack\u001b[38;5;241m.\u001b[39menter_context(\u001b[38;5;28mopen\u001b[39m(os_fspath(file), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m    428\u001b[0m     own_fid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m    430\u001b[0m \u001b[38;5;66;03m# Code to distinguish from NumPy binary files and pickles.\u001b[39;00m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../result/spectral_gap/3_sites/beta_1e-01.npy'"
      ]
     }
    ],
@@ -221,12 +226,14 @@
     "\tax1[row,col].errorbar(n_spin_list, mean_gap_data[i,:,1], std_gap_data[i,:,1], color='orange', linestyle='none', marker='o', markersize=markersize, capsize=capsize, capthick=capthick, elinewidth=elinewidth, label='MADE+QAOA (fixed angle)', zorder=4)\n",
     "\tax1[row,col].errorbar(n_spin_list, mean_gap_data[i,:,2], std_gap_data[i,:,2], color='grey', linestyle='none', marker='o', markersize=markersize, capsize=capsize, capthick=capthick, elinewidth=elinewidth, label='Uniform,', zorder=4)\n",
     "\tax1[row,col].errorbar(n_spin_list, mean_gap_data[i,:,3], std_gap_data[i,:,3], color='blue', linestyle='none', marker='o', markersize=markersize, capsize=capsize, capthick=capthick, elinewidth=elinewidth, label='Single Spin-Flip', zorder=4)\n",
+    "\tax1[row,col].errorbar(n_spin_list, mean_gap_data[i,:,4], std_gap_data[i,:,4], color='green', linestyle='none', marker='o', markersize=markersize, capsize=capsize, capthick=capthick, elinewidth=elinewidth, label='QAOA-MC', zorder=4)\n",
     "\tax1[row,col].set_xticks(n_spin_list)\n",
     " \n",
     "\tax1[row,col].plot(n_spin_list, mean_gap_data[i,:,0], color='red', linewidth=linewidth)\n",
     "\tax1[row,col].plot(n_spin_list, mean_gap_data[i,:,1], color='orange', linewidth=linewidth)\n",
     "\tax1[row,col].plot(n_spin_list, mean_gap_data[i,:,2], color='grey', linewidth=linewidth)\n",
     "\tax1[row,col].plot(n_spin_list, mean_gap_data[i,:,3], color='blue', linewidth=linewidth)\n",
+    "\tax1[row,col].plot(n_spin_list, mean_gap_data[i,:,4], color='green', linewidth=linewidth)\n",
     "\tax1[row,col].grid(axis='y', color='#BFBFBF', linestyle='-', linewidth=1.5)\n",
     " \n",
     "\tax1[row,col].set_axisbelow(True) #gridを背面にする\n",
@@ -252,6 +259,7 @@
     "ax1[-1,-1].plot([], [], marker='o', color='orange', label='MADE+QAOA (fixed angle)', linestyle=None)\n",
     "ax1[-1,-1].plot([], [], marker='o', color='grey', label='Uniform', linestyle=None)\n",
     "ax1[-1,-1].plot([], [], marker='o', color='blue', label='Single Spin-Flip', linestyle=None)\n",
+    "ax1[-1,-1].plot([], [], marker='o', color='green', label='QAOA-MC', linestyle=None)\n",
     "\n",
     "for spine in ax1[-1,-1].spines.values():\n",
     "    spine.set_visible(False)\n",
@@ -262,7 +270,7 @@
     "\n",
     "plt.tight_layout()\n",
     "#fig1.savefig(\"ave_gap_vs_qubit.svg\", dpi=300)\n",
-    "fig1.savefig(\"ave_gap_vs_qubit.png\", dpi=300)"
+    "#fig1.savefig(\"ave_gap_vs_qubit.png\", dpi=300)"
    ]
   }
  ],
@@ -282,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
