--- a/notebooks/20240703_spectral_gap_analysis.ipynb
+++ b/notebooks/20240703_spectral_gap_analysis.ipynb
@@ -421,7 +421,7 @@
     "\t\trun_epoch(model, 'test', test_data, opt)\n",
     "\t\trun_epoch(model, 'train', train_data, opt)\n",
     "\t\tif scheduler:\n",
-    "\t\t    scheduler.step()\n",
+    "\t\t\tscheduler.step()\n",
     "\t\ttest_loss.append(run_epoch(model, 'test', test_data, opt))\n",
     "\t\ttrain_loss.append(run_epoch(model, 'train', train_data, opt))\n",
     "\t\n",
