--- a/notebooks/20240712_instance_gen.ipynb
+++ b/notebooks/20240712_instance_gen.ipynb
@@ -16,16 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x1543eabd0>"
+       "<torch._C.Generator at 0x164beabd0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,11 +88,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_spin = 10\n",
+    "n_spin = 5\n",
     "path = 'data'\n",
     "folder_name = pathlib.Path(path) #Pathlibオブジェクトの生成"
    ]
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
