make 25sites instance

--- a/notebooks/20240712_instance_gen.ipynb
+++ b/notebooks/20240712_instance_gen.ipynb
@@ -22,7 +22,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x12f1eebd0>"
+       "<torch._C.Generator at 0x1643eebd0>"
       ]
      },
      "execution_count": 1,
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_spin = 20\n",
+    "n_spin = 25\n",
     "path = 'data'\n",
     "folder_name = pathlib.Path(path) #Pathlibオブジェクトの生成"
    ]
