--- a/figure/make_fig.ipynb
+++ b/figure/make_fig.ipynb
@@ -741,6 +741,8 @@
     }
    ],
    "source": [
+    "idx = 1\n",
+    "\n",
     "fig5, ax5 = plt.subplots(1,3, figsize=(15,4), dpi=200)\n",
     "\n",
     "ax5[0].spines[\"top\"].set_linewidth(spines)\n",
@@ -748,7 +750,7 @@
     "ax5[0].spines[\"bottom\"].set_linewidth(spines)\n",
     "ax5[0].spines[\"right\"].set_linewidth(spines)\n",
     "\n",
-    "ax5[0].hist(opt_qaoa_made_mag[0], bins=51, range=(-0.2,0.2), color='red', label='MADE+QAOA(opt)', zorder=2)\n",
+    "ax5[0].hist(opt_qaoa_made_mag[idx], bins=51, range=(-0.2,0.2), color='red', label='MADE+QAOA(opt)', zorder=2)\n",
     "ax5[0].grid(axis='y', color='#BFBFBF', linestyle='-', linewidth=1.5, zorder=1)\n",
     "ax5[0].set_ylim(0,82500)\n",
     "ax5[0].set_xlabel('Magnetization', fontsize=18)\n",
@@ -762,7 +764,7 @@
     "ax5[1].spines[\"bottom\"].set_linewidth(spines)\n",
     "ax5[1].spines[\"right\"].set_linewidth(spines)\n",
     "\n",
-    "ax5[1].hist(fix_qaoa_made_mag[0], bins=51, range=(-0.2,0.2), color='orange', label='MADE+QAOA(fixed)', zorder=2)\n",
+    "ax5[1].hist(fix_qaoa_made_mag[idx], bins=51, range=(-0.2,0.2), color='orange', label='MADE+QAOA(fixed)', zorder=2)\n",
     "ax5[1].grid(axis='y', color='#BFBFBF', linestyle='-', linewidth=1.5, zorder=1)\n",
     "ax5[1].set_ylim(0,82500)\n",
     "ax5[1].set_xlabel('Magnetization', fontsize=18)\n",
@@ -776,7 +778,7 @@
     "ax5[2].spines[\"bottom\"].set_linewidth(spines)\n",
     "ax5[2].spines[\"right\"].set_linewidth(spines)\n",
     "\n",
-    "ax5[2].hist(ssf_mag[0], bins=51, range=(-0.2,0.2), color='blue', label='SSF', zorder=2)\n",
+    "ax5[2].hist(ssf_mag[idx], bins=51, range=(-0.2,0.2), color='blue', label='SSF', zorder=2)\n",
     "ax5[2].grid(axis='y', color='#BFBFBF', linestyle='-', linewidth=1.5, zorder=1)\n",
     "ax5[2].set_ylim(0,82500)\n",
     "ax5[2].set_xlabel('Magnetization', fontsize=18)\n",
@@ -806,7 +808,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
