--- a/figure/make_fig.ipynb
+++ b/figure/make_fig.ipynb
@@ -73,7 +73,7 @@
    ],
    "source": [
     "n_spin_min = 3\n",
-    "n_spin_max = 11\n",
+    "n_spin_max = 12\n",
     "beta_list = [1e-1, 1e0, 2e0, 5e0, 1e1]\n",
     "print()"
    ]
@@ -115,19 +115,24 @@
     "\tfor n_spin in n_spin_list:\n",
     "\t\tif j == 0:\n",
     "\t\t\tgap_data_beta = np.load(\"result/spectral_gap/{0}_sites/beta_{1}.npy\".format(n_spin, '{:.0e}'.format(beta_list[i])))[np.newaxis]\n",
+    "\t\t\tgap_add_data_beta = np.load(\"result/spectral_gap/{0}_sites/beta_{1}_add_data.npy\".format(n_spin, '{:.0e}'.format(beta_list[i])))[np.newaxis]\n",
     "\t\telse:\n",
     "\t\t\tgap_data_beta = np.concatenate([gap_data_beta, np.load(\"result/spectral_gap/{0}_sites/beta_{1}.npy\".format(n_spin, '{:.0e}'.format(beta_list[i])))[np.newaxis]])\n",
+    "\t\t\tgap_add_data_beta = np.concatenate([gap_add_data_beta, np.load(\"result/spectral_gap/{0}_sites/beta_{1}_add_data.npy\".format(n_spin, '{:.0e}'.format(beta_list[i])))[np.newaxis]])\n",
     "\t\tj += 1\n",
     "\n",
     "\tif i == 0:\n",
     "\t\tgap_data = gap_data_beta[np.newaxis]\n",
+    "\t\tgap_add_data = gap_add_data_beta[np.newaxis]\n",
     "\telse:\n",
     "\t\tgap_data = np.concatenate([gap_data, gap_data_beta[np.newaxis]])\n",
+    "\t\tgap_add_data = np.concatenate([gap_add_data, gap_add_data_beta[np.newaxis]])\n",
     " \n",
     "\ti += 1\n",
     " \n",
     "# 形状確認\n",
-    "print(gap_data.shape)"
+    "print(gap_data.shape)\n",
+    "print(gap_add_data.shape)"
    ]
   },
   {
@@ -154,6 +159,9 @@
    "source": [
     "mean_gap_data = np.average(gap_data, axis=3)\n",
     "std_gap_data = np.std(gap_data, axis=3)\n",
+    "\n",
+    "mean_gap_add_data = np.average(gap_add_data, axis=3)\n",
+    "std_gap_add_data = np.std(gap_add_data, axis=3)\n",
     "\n",
     "print(mean_gap_data.shape)\n",
     "print(std_gap_data.shape)\n",
@@ -229,15 +237,19 @@
     "\tcol = i % n_col\n",
     "\t\n",
     "\tprint(n_spin_list.shape, mean_gap_data[i,:,0].shape)\n",
-    "\tax1[row,col].errorbar(n_spin_list, mean_gap_data[i,:,0], std_gap_data[i,:,0], color='red', linestyle='none', marker='o', markersize=markersize, capsize=capsize, capthick=capthick, elinewidth=elinewidth, label='MADE+QAOA (optimized)', zorder=5)\n",
-    "\tax1[row,col].errorbar(n_spin_list, mean_gap_data[i,:,1], std_gap_data[i,:,1], color='orange', linestyle='none', marker='o', markersize=markersize, capsize=capsize, capthick=capthick, elinewidth=elinewidth, label='MADE+QAOA (fixed angle)', zorder=4)\n",
+    "\t#ax1[row,col].errorbar(n_spin_list, mean_gap_data[i,:,0], std_gap_data[i,:,0], color='red', linestyle='none', marker='o', markersize=markersize, capsize=capsize, capthick=capthick, elinewidth=elinewidth, label='MADE+QAOA (optimized)', zorder=5)\n",
+    "\t#ax1[row,col].errorbar(n_spin_list, mean_gap_data[i,:,1], std_gap_data[i,:,1], color='orange', linestyle='none', marker='o', markersize=markersize, capsize=capsize, capthick=capthick, elinewidth=elinewidth, label='MADE+QAOA (fixed angle)', zorder=4)\n",
+    "\tax1[row,col].errorbar(n_spin_list, mean_gap_add_data[i,:,0], std_gap_add_data[i,:,0], color='red', linestyle='none', marker='o', markersize=markersize, capsize=capsize, capthick=capthick, elinewidth=elinewidth, label='MADE+QAOA (optimized)', zorder=5)\n",
+    "\tax1[row,col].errorbar(n_spin_list, mean_gap_add_data[i,:,1], std_gap_add_data[i,:,1], color='orange', linestyle='none', marker='o', markersize=markersize, capsize=capsize, capthick=capthick, elinewidth=elinewidth, label='MADE+QAOA (fixed angle)', zorder=4)\n",
     "\tax1[row,col].errorbar(n_spin_list, mean_gap_data[i,:,2], std_gap_data[i,:,2], color='grey', linestyle='none', marker='o', markersize=markersize, capsize=capsize, capthick=capthick, elinewidth=elinewidth, label='Uniform,', zorder=4)\n",
     "\tax1[row,col].errorbar(n_spin_list, mean_gap_data[i,:,3], std_gap_data[i,:,3], color='blue', linestyle='none', marker='o', markersize=markersize, capsize=capsize, capthick=capthick, elinewidth=elinewidth, label='Single Spin-Flip', zorder=4)\n",
     "\tax1[row,col].errorbar(n_spin_list, mean_gap_data[i,:,4], std_gap_data[i,:,4], color='green', linestyle='none', marker='o', markersize=markersize, capsize=capsize, capthick=capthick, elinewidth=elinewidth, label='QAOA-MC', zorder=4)\n",
     "\tax1[row,col].set_xticks(n_spin_list)\n",
     " \n",
-    "\tax1[row,col].plot(n_spin_list, mean_gap_data[i,:,0], color='red', linewidth=linewidth)\n",
-    "\tax1[row,col].plot(n_spin_list, mean_gap_data[i,:,1], color='orange', linewidth=linewidth)\n",
+    "\t#ax1[row,col].plot(n_spin_list, mean_gap_data[i,:,0], color='red', linewidth=linewidth)\n",
+    "\t#ax1[row,col].plot(n_spin_list, mean_gap_data[i,:,1], color='orange', linewidth=linewidth)\n",
+    "\tax1[row,col].plot(n_spin_list, mean_gap_add_data[i,:,0], color='red', linewidth=linewidth)\n",
+    "\tax1[row,col].plot(n_spin_list, mean_gap_add_data[i,:,1], color='orange', linewidth=linewidth)\n",
     "\tax1[row,col].plot(n_spin_list, mean_gap_data[i,:,2], color='grey', linewidth=linewidth)\n",
     "\tax1[row,col].plot(n_spin_list, mean_gap_data[i,:,3], color='blue', linewidth=linewidth)\n",
     "\tax1[row,col].plot(n_spin_list, mean_gap_data[i,:,4], color='green', linewidth=linewidth)\n",
