--- a/notebooks/20240712_instance_gen.ipynb
+++ b/notebooks/20240712_instance_gen.ipynb
@@ -16,20 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<torch._C.Generator at 0x1643eebd0>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from scipy.optimize import minimize\n",
@@ -67,9 +56,10 @@
     "plt.rcParams[\"font.family\"] = \"Helvetica\"\n",
     "plt.rcParams['mathtext.fontset'] = 'cm'\n",
     "\n",
-    "seed = 1454\n",
+    "#seed = 1454\n",
+    "seed = None\n",
     "rng = np.random.default_rng(seed)\n",
-    "torch.manual_seed(seed)"
+    "#torch.manual_seed(seed)"
    ]
   },
   {
@@ -88,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
