--- a/notebooks/20240926_mcmc_pre_experiment.ipynb
+++ b/notebooks/20240926_mcmc_pre_experiment.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,6 +735,29 @@
     "ax3_4.tick_params(width=1.5, labelsize=16, length=5, labelbottom=True)\n",
     "ax3_4.tick_params(axis=\"x\", which='major', width=1.5)\n",
     "ax3_4.legend(fontsize=14, loc='lower right', frameon=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[(1., 1) (2., 2) (4., 4) (6., 6) (9., 9)]\n",
+      " [(0., 0) (1., 1) (2., 2) (3., 3) (4., 4)]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "value = [[1,6,4,2,9],[0,1,2,3,4]]\n",
+    "dtype = [('value', float), ('idx', int)]\n",
+    "arr = np.array(value, dtype=dtype)\n",
+    "\n",
+    "arr_sort = np.sort(arr, axis=1, kind='quicksort')\n",
+    "print(arr_sort)"
    ]
   }
  ],
