make 25-sites instances

--- a/notebooks/20240712_instance_gen.ipynb
+++ b/notebooks/20240712_instance_gen.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,13 +96,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "instance = Ising_model(n_spin, type='SK')\n",
     "    \n",
-    "fname = folder_name.joinpath('{0}_sites_instance.pickle'.format(n_spin))\n",
+    "fname = folder_name.joinpath('{0}_sites_instance_05.pickle'.format(n_spin))\n",
     "with open(str(fname), mode='wb') as f:\n",
     "    pickle.dump(instance, f)"
    ]
